Fixed issue where navbar-toggler would overflow by adding overflow hidden to page

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@
     );
 }
 
+html {
+  overflow-x: hidden;
+}
+
 .close-navbar-toggler {
   position: fixed;
   top: 0;
